Fix TravisCI surefire bug